site: Update pages to support ContentSection changes.

--- a/src/Site/Components/Pages/StyleGuide/CSSComponents/Card.razor
+++ b/src/Site/Components/Pages/StyleGuide/CSSComponents/Card.razor
@@ -29,32 +29,34 @@
         </p>
     </Overview>
     <ChildContent>
-        <div class="card object mb-8">
-            <div class="mb-8">
-                <h2 class="heading heading-3">Usage Guidelines</h2>
-                <div class="copy">
-                    <ul class="emoji">
-                        <li class="check">Card Links look like Cards, but interactive.</li>
-                        <li class="check">The entire Card is tabbable and clickable.</li>
-                        <li class="check">
-                            Card Links may link to other pages, other sites, or
-                            anchors on the same page.
-                        </li>
-                        <li class="x">
-                            Card links are for navigation, not UI actions.  Use
-                            a button when appropriate.
-                        </li>
-                    </ul>
+        <ContentArea>
+            <div class="card object mb-8">
+                <div class="mb-8">
+                    <h2 class="heading heading-3">Usage Guidelines</h2>
+                    <div class="copy">
+                        <ul class="emoji">
+                            <li class="check">Card Links look like Cards, but interactive.</li>
+                            <li class="check">The entire Card is tabbable and clickable.</li>
+                            <li class="check">
+                                Card Links may link to other pages, other sites, or
+                                anchors on the same page.
+                            </li>
+                            <li class="x">
+                                Card links are for navigation, not UI actions.  Use
+                                a button when appropriate.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <h2 class="heading heading-3">Examples</h2>
+                    <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
+                        <div class="card">.card</div>
+                        <div class="card object">.card .object</div>
+                        <div class="card card--skeletal">.card .card--skeletal</div>
+                    </div>
                 </div>
             </div>
-            <div>
-                <h2 class="heading heading-3">Examples</h2>
-                <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
-                    <div class="card">.card</div>
-                    <div class="card object">.card .object</div>
-                    <div class="card card--skeletal">.card .card--skeletal</div>
-                </div>
-            </div>
-        </div>
+        </ContentArea>
     </ChildContent>
 </SectionBlock>
