--- a/src/Site/Components/Pages/StyleGuide/ServerComponents/Overview.razor
+++ b/src/Site/Components/Pages/StyleGuide/ServerComponents/Overview.razor
@@ -13,12 +13,14 @@
         </p>
     </Overview>
     <ChildContent>
-        <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
-            <div class="card object">Content Area</div>
-            <DocLink Href="/style-guide/server-components/card-link">
-                Card Link
-            </DocLink>
-        </div>
+        <ContentArea>
+            <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
+                <div class="card object">Content Area</div>
+                <DocLink Href="/style-guide/server-components/card-link">
+                    Card Link
+                </DocLink>
+            </div>
+        </ContentArea>
     </ChildContent>
 </SectionBlock>
 
