--- a/src/Site/Components/Pages/StyleGuide/CSSComponents/Overview.razor
+++ b/src/Site/Components/Pages/StyleGuide/CSSComponents/Overview.razor
@@ -10,17 +10,19 @@
         </p>
     </Overview>
     <ChildContent>
-        <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
-            <div class="card object">Card</div>
-            <CardLink Href="/style-guide/css-components/card" Class="object">
-                Card
-            </CardLink>
-            <div class="card object">Copy</div>
-            <div class="card object">Headings</div>
-            <div class="card object">Horizontal Rule</div>
-            <div class="card object">Object</div>
-            <div class="card object">Sub-Heading</div>
-        </div>
+        <ContentArea>
+            <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
+                <div class="card object">Card</div>
+                <CardLink Href="/style-guide/css-components/card" Class="object">
+                    Card
+                </CardLink>
+                <div class="card object">Copy</div>
+                <div class="card object">Headings</div>
+                <div class="card object">Horizontal Rule</div>
+                <div class="card object">Object</div>
+                <div class="card object">Sub-Heading</div>
+            </div>
+        </ContentArea>
     </ChildContent>
 </SectionBlock>
 
